--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,31 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="stylesheet"
+      href="https://testblick.de/style-global/lib/fontawesome-free/css/all.min.css?v=[cs_version]"
+    />
+    <link
+      rel="stylesheet"
+      href="https://testblick.de/style-global/lib/ionicons/css/ionicons.min.css?v=[cs_version]"
+    />
+    <link
+      rel="stylesheet"
+      href="https://testblick.de/style-global/lib/typicons.font/typicons.css?v=[cs_version]"
+    />
+    <link
+      rel="stylesheet"
+      href="https://testblick.de/style-global/lib/daterangepicker/daterangepicker.css?v=[cs_version]"
+    />
+    <!-- global CSS -->
+    <link
+      rel="stylesheet"
+      href="https://testblick.de/style-global/css/azia-global.min.css?v=[cs_version]"
+    />
+    <link
+      rel="stylesheet"
+      href="https://testblick.de/style-global/css/serviceblick-global.css?v=[cs_version]"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
